tests/ok/while-true-literal-if-break-owner-state.ari
fn main() -> i64 {
  let token: own i64 = 5;
  while true {
    if true {
      break;
    }
    drop token;
  }
  drop token;
  return 0;
}
