tests/errors/zone-drop.ari
fn main() -> i64 {
  let zone = zone::create(64);
  drop zone;
  return 0;
}
